# Fractallica

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md  devconsole.md  gamemodesfreecamlua.md  looplua.md  mainlua.md  menusdebuglua.md  menusinputtestlua.md  menusmainmenulua.md  renderlua.md
game_folder/locals/: English.loc
game_folder/scripts/: loop.lua  main.lua  render.lua
game_folder/scripts/compute/: noise_init.lua  simple.lua
game_folder/scripts/compute/main/: simple_shading.glsl
game_folder/scripts/compute/multires_marching/: MRRM2.glsl
game_folder/scripts/compute/noise/: noise.glsl
game_folder/scripts/compute/utility/: definitions.glsl  distance_estimators.glsl
game_folder/scripts/gamemodes/: free_cam.lua
game_folder/scripts/libs/: definitions.lua
game_folder/scripts/lua/: main.lua
game_folder/scripts/menus/: debug.lua  input_test.lua  main_menu.lua
src/: CMakeLists.txt  Camera.cpp  Camera.h  Gamemodes.cpp  Gamemodes.h  Interface.cpp  Interface.h  InterfaceLua.cpp  InterfaceLua.h  Localization.cpp  Localization.h  LuaVM.cpp  LuaVM.h  Luna.h  Main.cpp  Renderer.cpp  Renderer.h  Res.h  Resources.cpp  Resources.h  ResourcesLua.cpp  ResourcesLua.h  Settings.h  Shaders.cpp  Shaders.h  ShadersLua.cpp  ShadersLua.h
