add_library(FractallicaSources
  Res.h
  Interface.h
  Interface.cpp
  
  InterfaceLua.h
  InterfaceLua.cpp
  
  Localization.h
  Localization.cpp

  Settings.h
  Settings.cpp
  
  Resources.h
  Resources.cpp
  
  Luna.h

  LuaVM.h
  LuaVM.cpp

  Gamemodes.h
  Gamemodes.cpp
  
  Renderer.h
  Renderer.cpp
  
  Shaders.h
  Shaders.cpp
  
  ShadersLua.h
  ShadersLua.cpp
  
  Camera.h
  Camera.cpp

  ExprParser.h
  ExprParser.cpp
)
